@@ -1,3 +1,9 @@
+2009-12-28  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclInterp.c (TimeLimitCallback): [Bug 2891362]: Ensure that
+	* tests/interp.test (interp-34.13):	   the granularity ticker is
+	reset when we check limits because of the time limit event firing.
+
 2009-12-27  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/namespace.n (SCOPED SCRIPTS): [Bug 2921538]: Updated example to
